--- a/ci/ci-test-tasks/canary-tests-v2.yml
+++ b/ci/ci-test-tasks/canary-tests-v2.yml
@@ -61,6 +61,6 @@ jobs:
 
   - script: |
       echo "Tasks to test: $(tasks)"
-      node ./ci/ci-test-tasks/test-and-verify-v2 $(System.AccessToken) $(ADOUrl) $(System.TeamProject) $(tasks)
+      node --disable-warnings=DeprecationWarning ./ci/ci-test-tasks/test-and-verify-v2 $(System.AccessToken) $(ADOUrl) $(System.TeamProject) $(tasks)
     displayName: 'Run test pipelines and verify results'
-    failOnStderr: false
+    failOnStderr: true
